# aleo2llvm

./: .gitignore  Cargo.toml  README.md  bulkGen.sh
src/: codegen.rs  main.rs
src/parser/: aleo.py  aleo_parser.py
test/leo-examples/: README.md
test/leo-examples/bubblesort/: main.aleo
test/leo-examples/core/: main.aleo  main.json  main.ll
test/leo-examples/fibonacci/: main.aleo
test/leo-examples/groups/: main.aleo
test/leo-examples/helloworld/: main.aleo
test/leo-examples/interest/: main.aleo
test/leo-examples/message/: main.aleo
test/leo-examples/simple_token/: main.aleo
test/leo-examples/twoadicity/: main.aleo
test/toy-examples/adder/: main.aleo  main.json  main.ll  program.json
test/toy-examples/badrecord/: main.aleo  main.json  main.ll  program.json
test/toy-examples/conditional/: README.md  main.aleo  main.json  main.ll  program.json
test/toy-examples/map/: README.md  main.aleo  main.json  main.ll
test/toy-examples/simple/: README.md  main.aleo  main.json  main.ll
test/toy-examples/unused/: main.aleo  main.json  main.ll
test/workshop/auction/: main.aleo  main.json  main.ll  run.sh
test/workshop/basic_bank/: main.aleo  main.json  main.ll  run.sh
test/workshop/battleship/: README.md  main.aleo  run.sh
test/workshop/battleship/imports/: board.aleo  (+2 more)
test/workshop/tictactoe/: run.sh
test/workshop/token/: main.aleo  program.json  run.sh
test/workshop/vote/: main.aleo  run.sh
toy-examples/adder/: README.md
toy-examples/badrecord/: README.md
toy-examples/map/: main.aleo  program.json
toy-examples/simple/: program.json
(+8 files in other folders)
