[package]
name = "aleo2llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm-synthesizer = "0.10.2"
snarkvm-console-network = "0.10.2"
snarkvm-console-program = "0.10.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
serde_json = "1.0.96"
serde = { version = "1.0.96", features = ["derive"] }